objective decomposition